--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
             <artifactId>biojava3-core</artifactId>
             <version>3.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_2.10</artifactId>
+            <version>2.0.M5b</version>
+        </dependency>
         <!-- other biojava jars as needed -->
         <dependency>
             <groupId>net.sourceforge.argparse4j</groupId>
@@ -64,10 +69,10 @@
         </dependency>
     </dependencies>
     <repositories>
-         <repository>
-             <id>biojava-maven-repo</id>
-             <name>BioJava repository</name>
-             <url>http://www.biojava.org/download/maven/</url>
+        <repository>
+            <id>biojava-maven-repo</id>
+            <name>BioJava repository</name>
+            <url>http://www.biojava.org/download/maven/</url>
         </repository>
         <repository>
             <id>argparse4j-maven-repo</id>
