--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>argparse4j</artifactId>
             <version>0.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.utgenome.thirdparty</groupId>
+            <artifactId>picard</artifactId>
+            <version>1.86.0</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
