--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
             <artifactId>picard</artifactId>
             <version>1.86.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.2</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
