--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>edu.gsu.cs</groupId>
-    <artifactId>KGEM</artifactId>
+    <groupId>edu.gsu.cs.kgem</groupId>
+    <artifactId>kgem</artifactId>
     <version>0.3.1</version>
     <packaging>jar</packaging>
 
@@ -14,7 +14,7 @@
 
     <developers>
         <developer>
-            <id>night_stalker</id>
+            <id>night-stalker</id>
             <name>Alex Artyomenko</name>
             <email>aartyomenko@cs.gsu.edu</email>
         </developer>
