--- a/pom.xml
+++ b/pom.xml
@@ -146,16 +146,11 @@
             <artifactId>github-deploy-maven-plugin</artifactId>
             <version>1.0.1</version>
         </dependency>
-        <dependency>
-            <groupId>apporiented.com</groupId>
-            <artifactId>hierarchical-clustering</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>clustering</groupId>
-            <artifactId>ClusterLib</artifactId>
-            <version>1.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>apporiented.com</groupId>-->
+            <!--<artifactId>hierarchical-clustering</artifactId>-->
+            <!--<version>1.0</version>-->
+        <!--</dependency>-->
     </dependencies>
     <pluginRepositories>
         <pluginRepository>
