No Wards clustering

--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
-                    <!-- <finalName>k-gem</finalName> -->
+                    <finalName>kgem-clustering</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
