--- a/pom.xml
+++ b/pom.xml
@@ -92,22 +92,26 @@
                     <sourceDir>src</sourceDir>
                     <jvmArgs>
                         <jvmArg>-Xms1024m</jvmArg>
-                        <jvmArg>-Xmx2g</jvmArg>
+                        <jvmArg>-Xmx1g</jvmArg>
                     </jvmArgs>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.10.4</version>
+            <version>2.10.3</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
-            <version>2.10.4</version>
+            <version>2.10.3</version>
         </dependency>
         <dependency>
             <groupId>org.biojava</groupId>
@@ -117,7 +121,7 @@
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_2.10</artifactId>
-            <version>2.0.M8</version>
+            <version>2.1.3</version>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>junit</groupId>-->
