--- a/pom.xml
+++ b/pom.xml
@@ -72,8 +72,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -92,12 +92,15 @@
                     <sourceDir>src</sourceDir>
                     <jvmArgs>
                         <jvmArg>-Xms1024m</jvmArg>
-                        <jvmArg>-Xmx2g</jvmArg>
+                        <jvmArg>-Xmx1g</jvmArg>
                     </jvmArgs>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.biojava</groupId>
@@ -107,17 +110,17 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.10.1</version>
+            <version>2.10.3</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
-            <version>2.10.1</version>
+            <version>2.10.3</version>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_2.10</artifactId>
-            <version>2.0.M8</version>
+            <version>2.1.3</version>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>junit</groupId>-->
@@ -128,12 +131,12 @@
         <dependency>
             <groupId>com.github.scopt</groupId>
             <artifactId>scopt_2.10</artifactId>
-            <version>3.1.0</version>
+            <version>3.2.0</version>
         </dependency>
         <dependency>
             <groupId>org.utgenome.thirdparty</groupId>
             <artifactId>picard</artifactId>
-            <version>1.86.0</version>
+            <version>1.102.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
